# Item-Recovery

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_GUI.md  TEST_REPORT.md  build_and_run.bat  build_and_run_debug.bat  buildnrun_gemini.bat  run_manual_test.sh  run_test.sh  test_all.txt  test_build_script.bat  test_comprehensive.txt  test_simple.txt
data/: items.txt  itemtypes.txt  users.txt
doc/others/: DEBUG_GUIDE.md  MANUAL_TEST_GUIDE.md  WINDOWS_DEPLOYMENT.md
doc/src/: addItem.wsd  adminAdd.wsd  class.wsd  login.wsd  searchItem.wsd  usecase.wsd
include/: interface.h  inventory.h  item.h  itemtype.h  mainwindow.bak  mainwindow.h  user.h
output/: main
src/: interface.cpp  interface.d  inventory.cpp  inventory.d  item.cpp  item.d  itemtype.cpp  itemtype.d  main.cpp  main.d  main_gui.d  mainwindow.cpp  mainwindow.d  moc_mainwindow.cpp  moc_mainwindow.d  user.cpp  user.d
test/: TEST_CASES.md  build_and_run.bat  build_and_run_debug.bat  test_approve.txt  test_debug.txt  test_input.txt  test_output.txt
